[package]
name = "BlueToothCommand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced"}
btleplug = "0.10"

[dev-dependencies]
rand = "0.8.5"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.1", features = ["macros", "rt", "rt-multi-thread"] }
#serde_json = "1.0.85"
tokio-stream = { version = "0.1.10", features = ["sync"] }
futures = "0.3.24"
uuid = "1.1.2"
